@@ -133,6 +133,22 @@ module.exports = client => {
     return a;
   };
 
+  // USER OBJECT FROM MENTION
+  client.getUserFromMention = mention => {
+    if (!mention) return;
+  
+    if (mention.startsWith('<@') && mention.endsWith('>')) {
+      mention = mention.slice(2, -1);
+  
+      if (mention.startsWith('!')) {
+        mention = mention.slice(1);
+      }
+  
+      return client.users.cache.get(mention);
+    }
+  }
+  
+
   // MUSIC
   client.music = {guilds: {}};
 
